Polished your rules cause I'm bored and on Github
(I did not manipulate any text, I just polished the website to look better)
(also for the boosters-only channel, you might wanna href that yourself)

--- a/discordrules.html
+++ b/discordrules.html
@@ -20,12 +20,12 @@ h1, h2 {
 </style>
 </head>
 <body>
-	<h1>INTRODUCTION</h1>
+	<h1><strong>INTRODUCTION</strong></h1>
 	As a member or moderator, either temporary or permanent, you are required to follow both the Discord Terms of Service as well as the rules of this server. You are not allowed to forgo any of these conditions in any part of the server, may it be verbal, visual, or vocal. Violating any of these rules can and will result in a punishment suiting your cause, albeit your position and ranking as well as your good-willed contributions to the server and its members. You are subjected to follow these conditions for any actions you may do in the server. You may use and communicate in the server as made available to you, not as how you wish to use it nor how you believe other people have told you to use it.
 	
 	
 	
-	<h2>I. ACCOUNT</h2>
+	<h2><strong>I. ACCOUNT</strong></h2>
 	You will be warned or kicked if you are caught having a profile picture, status, about me, user tag, nickname or banner that implies racism, nazism, fascism, fervent antisemitism, sexism, or any other form of discrimination, unless that is your actual belief (excluding forms of racism that lead to supremacism).
 	<br>
 	You will be warned if you are caught having a profile picture, status, about me, user tag, nickname or banner that implies NSFW or NSFL but does not explicitly show NSFW or NSFL content. (May vary.)
@@ -36,8 +36,8 @@ h1, h2 {
 	
 	
 	
-	<h2>II. CONTENT</h2>
-	Speak English. English is the main language in this server. If you wish to speak in vernacular, either get a translator or ask someone to assist you with translation. Be sure that the translation is accurate. (Words that violate the rules that have been mistranslated are appealable unless the words were intended.)
+	<h2><strong>II. CONTENT</strong></h2>
+	Speak English. English is the main language in this server. <strong>If you wish to speak in vernacular, either get a translator or ask someone to assist you with translation.</strong> Be sure that the translation is accurate. (Words that violate the rules that have been mistranslated are appealable unless the words were intended.)
 	<br>
 	Keep stuff in their respective channels. Refer to Section III for more information.
 	<br>
@@ -71,50 +71,50 @@ h1, h2 {
 	
 	
 	
-	<h2>III. CHANNELS</h2>
-	#nerd-spotted is the welcome channel.
+	<h2><strong>III. CHANNELS</strong></h2>
+	<a href="https://discord.com/channels/816604795406123008/816605776687661086">#nerd-spotted</a> is the welcome channel.
 	<br>
-	#simplified-rules is the simplified rules channel. Note that because a more detailed version of the rules exist (which is this document), it does not mean that the only rules you are to follow are those that are stated in #simplified-rules, or vice versa.
+	<a href="https://discord.com/channels/816604795406123008/816605861530959894">#simplified-rules</a> is the simplified rules channel. Note that because a more detailed version of the rules exist (which is this document), it does not mean that the only rules you are to follow are those that are stated in #simplified-rules, or vice versa.
 	<br>
-	#detailed-rules is the channel that leads you to this document.
+	<a href="https://discord.com/channels/816604795406123008/816605885383180290">#detailed-rules</a> is the channel that leads you to this document.
 	<br>
-	#information is the information channel.
+	<a href="https://discord.com/channels/816604795406123008/816918182584647722">#information</a> is the information channel.
 	<br>
-	#roles-for-nerds is the channel for obtaining self-assignable roles.
+	<a href="https://discord.com/channels/816604795406123008/816809934888239104">#roles-for-nerds</a> is the channel for obtaining self-assignable roles.
 	<br>
-	#scinouncements is the channel where the owner makes his announcements, especially when streaming or when major updates in the server happen.
+	<a href="https://discord.com/channels/816604795406123008/817016693766488106">#scinouncements</a> is the channel where the owner makes his announcements, especially when streaming or when major updates in the server happen.
 	<br>
-	#staffnouncements is the channel where staff make important announcements.
+	<a href="https://discord.com/channels/816604795406123008/816650768349528094">#staffnouncements</a> is the channel where staff make important announcements.
 	<br>
-	#notreallynouncements is the channel where staff make unimportant announcements.
+	<a href="https://discord.com/channels/816604795406123008/836367900629532672">#notreallynouncements</a> is the channel where staff make unimportant announcements.
 	<br>
-	#events-and-giveaways is the channel where events or giveaways happen.
+	<a href="https://discord.com/channels/816604795406123008/818164949310242847">#events-and-giveaways</a> is the channel where events or giveaways happen.
 	<br>
-	#give-away-logs is for proof that the prize is given after a giveaway has ended.
+	<a href="https://discord.com/channels/816604795406123008/837529082425376808">#give-away-logs</a> is for proof that the prize is given after a giveaway has ended.
 	<br>
-	#main-chat is the general communication channel. Conversations must strictly happen here. Conversations elsewhere that are more than 5 messages long are purgeable, excluding: those in the booster channel, those in the media channel that discuss certain media being sent, those in bot channels that discuss about the bots or their functionality, those in the feedback channel that discuss about feedback of something, those in the advertisement channel that discuss about the advertisements, those in the spam channel that are more of conversations than of actual spam, and those in the no-mic channel for conversations with those in vcs that have no microphone.
+	<a href="https://discord.com/channels/816604795406123008/816604795406123011">#main-chat</a> is the general communication channel. Conversations must strictly happen here. Conversations elsewhere that are more than 5 messages long are purgeable, excluding: those in the booster channel, those in the media channel that discuss certain media being sent, those in bot channels that discuss about the bots or their functionality, those in the feedback channel that discuss about feedback of something, those in the advertisement channel that discuss about the advertisements, those in the spam channel that are more of conversations than of actual spam, and those in the no-mic channel for conversations with those in vcs that have no microphone.
 	<br>
-	#boosters-only is a Nitro-booster-only version of the general channel.
+	<a href="#">#boosters-only</a> is a Nitro-booster-only version of the general channel.
 	<br>
-	#media-and-memes is the media channel.
+	<a href="https://discord.com/channels/816604795406123008/816610198369075263">#media-and-memes</a> is the media channel.
 	<br>
-	#bots-are-for-nerds and #bots-are-for-nerds-2 are the bot channels. Bot commands must only be executed here and only here, unless it is a moderation command executed by staff.
+	<a href="https://discord.com/channels/816604795406123008/816610316179079191">#bots-are-for-nerds</a> and <a href"https://discord.com/channels/816604795406123008/822664911901032479">#bots-are-for-nerds-2</a> are the bot channels. Bot commands must only be executed here and only here, unless it is a moderation command executed by staff.
 	<br>
-	#feedback is the feedback channel, usually for GD layouts or levels. YouTube links can be posted here as long as you are looking for feedback. However, this can also include non-GD stuff.
+	<a href="https://discord.com/channels/816604795406123008/816624744278786048">#feedback</a> is the feedback channel, usually for GD layouts or levels. YouTube links can be posted here as long as you are looking for feedback. However, this can also include non-GD stuff.
 	<br>
-	#anything-not-scipred is the advertisement channel. Here you can post your YouTube channel links, Github commits or repositories, Twitter or Reddit posts, Twitch streams, Discord server invites, Quora questions or answers, and so on.
+	<a href="https://discord.com/channels/816604795406123008/816610427211350047">#anything-not-scipred</a> is the advertisement channel. Here you can post your YouTube channel links, Github commits or repositories, Twitter or Reddit posts, Twitch streams, Discord server invites, Quora questions or answers, and so on.
 	<br>
-	#spampred is the spam channel. Refer to Section IV for more information about allowed and disallowed spam.
+	<a href="https://discord.com/channels/816604795406123008/932054286781804555">#spampred</a> is the spam channel. Refer to Section IV for more information about allowed and disallowed spam.
 	<br>
-	#questions is for asking the owner questions. Personal/private questions are highly discouraged.
+	<a href="https://discord.com/channels/816604795406123008/834964607545638922">#questions</a> is for asking the owner questions. Personal/private questions are highly discouraged.
 	<br>
-	#answers is for the owner's answers to your questions.
+	<a href="https://discord.com/channels/816604795406123008/834965042003836998">#answers</a> is for the owner's answers to your questions.
 	<br>
-	#chatpred is the no-mic channel.
+	<a href="https://discord.com/channels/816604795406123008/816821876713717800">#chatpred</a> is the no-mic channel.
 	
 	
 	
-	<h2>IV. SPAMMING</h2>
+	<h2><strong>IV. SPAMMING</strong></h2>
 	Disallowed forms of spam include:
 	<br>
 	- General Spam: malvertisement, ad scams, etc.
@@ -151,7 +151,7 @@ h1, h2 {
 	
 	
 	
-	<h2>V. MODERATION</h2>
+	<h2><strong>V. MODERATION</strong></h2>
 	Do not simply ask for staff. If you are to apply for staff you will strongly need acceptable experience as well as evidence, and you will have to wait until staff applications are open. Do not repeatedly superior staff for it.
 	<br>
 	If you want to be promoted, DM the owner about your request. Be serious about it. Do not repeatedly ask the owner about it.
@@ -190,7 +190,7 @@ h1, h2 {
 	
 	
 	
-	<h2>VI. GIVEAWAYS</h2>
+	<h2><strong>VI. GIVEAWAYS</strong></h2>
 	No begging. If you got re-rolled, that's probably because you didn't respond in time, and we don't need your verification on if we host legit or not. If a giveaway does not have any specified response time then you should claim it as soon as possible. If you do not claim it within 3 days or so, the giveaway will be re-rolled.
 	<br>
 	If you have won a giveaway but the giveaway host is offline, either wait for the host to become online and DM them there and then, or DM them while they're offline and they can give the prize once they are online.
@@ -201,7 +201,7 @@ h1, h2 {
 	
 	
 	
-	<h2>VII. LOOPHOLES, BYPASSES, AND FALLACIES</h2>
+	<h2><strong>VII. LOOPHOLES, BYPASSES, AND FALLACIES</strong></h2>
 	You are not allowed to use loopholes, false arguments and the like to escape a designated consequence for breaking a rule. These include:
 	<br>
 	- Ad Antiquitatem: "It's right because it's always been done that way."
