--- a/discordrules.html
+++ b/discordrules.html
@@ -36,28 +36,22 @@ h1, h2 {
 	
 	
 	
-	<h2><strong>II. CONTENT</strong></h2>
+	<h2><strong>II. COMMUNICATIVE CONTENT</strong></h2>
 	Speak English. English is the main language in this server. <strong>If you wish to speak in vernacular, either get a translator or ask someone to assist you with translation.</strong> Be sure that the translation is accurate. (Words that violate the rules that have been mistranslated are appealable unless the words were intended.)
 	<br>
 	Keep stuff in their respective channels. Refer to Section III for more information.
 	<br>
-	No making fun of religious, suicidal or political topics.
+	Refrain from making fun of or talking about religious, suicidal or explicitly political topics.
 	<br>
 	No toxicity, harrassment, or discrimination of any human attribute such as race or gender.
 	<br>
 	Do your best not to swear. Although Carl-bot autowarns people (and when at 3 or more warns mutes them), mutes from swearing are always appealable. Just DM the owner or a staff member that can unmute you. However, note that although swear mutes are always appealable, it does not guarantee that your appeals will be granted.
 	<br>
-	No starting flaming arguments or debates that can get out of hand. Keep such arguments in DMs, or in other servers whenever appropriate.
+	No starting flaming arguments or debates that can get out of hand. Keep such arguments in DMs, or in other servers whenever appropriate. Of course, friendly arguments such as mathematical debates are allowed, but not to the point where either side resorts to ad hominem.
 	<br>
 	No causing uncontrolled drama, self-pity, pessimism intended to spread to other people or existential crises. Do this privately whenever necessary.
 	<br>
 	Respect others as they would respect you. However, this does not mean that you should be toxic if another is being toxic at you. Your best response would be to get help from staff.
-	<br>
-	No blackmailing or doxxing members, regardless of the intention or what the victim did.
-	<br>
-	Refrain from sharing private information in the server. Things such as address, credit card information, birth certificate, driver's license, and IDs are not allowed, regardless of how heavily censored or uncensored they may be.
-	<br>
-	No scamming or begging, especially Free Nitro scam links. Many of these usually have a single-character error in the link. Always double-check and report scams. If you detect someone scamming people in the form of flooding channels (and sometimes DMs), immediately block them and ask help from staff. If you want to legitimately give away free Nitro, ask a staff member or give the Nitro in private. If you want to give away Nitro in a giveaway, ask a staff member to make the giveaway.
 	<br>
 	No spam-pinging people who have no confirmation that they are to be pinged, especially those who do not want to be disturbed. It's best if you decide not to spam-ping them in the first place.
 	<br>
@@ -65,13 +59,33 @@ h1, h2 {
 	<br>
 	Strictly no direct NSFW or NSFL content. This includes pornography websites, hentai, gore, psychopathic shock videos, surgery procedures and uncensored mutilation. Regardless of the intention, this server is the wrong place for that kind of content.
 	<br>
+	If you want to appeal for a punishment you got, DM the owner. Do not ask staff to appeal the punishment themselves. Instead, ask staff to send the appeal to the owner if you are too scared to ask the owner directly.
+
+
+
+	<h2><strong>III. FINANCIAL OR TECHNOLOGICAL CONTENT</strong></h2>
+	No scamming or begging, especially Free Nitro scam links. Many of these usually have a single-character error in the link. Always double-check and report scams. If you detect someone scamming people in the form of flooding channels (and sometimes DMs), immediately block them and ask help from staff. If you want to legitimately give away free Nitro, ask a staff member or give the Nitro in private. If you want to give away Nitro in a giveaway, ask a staff member to make the giveaway.
+	<br>
 	No adware, backdoors, DDoS, ransomware, bloatware, trojan horses, viruses, worms, spyware, rootkits, keyloggers, crimeware, RAM scrapers, phishing links, links to third-party driver updaters, grabify links, Visual Basic Script files, Fake Nitro rickroll links, and any other form of malware or dangerous software.
 	<br>
 	Strictly no posting videos, images, gifs or files that intentionally crash Discord, or files that harmfully manipulate the Discord GUI or the computers or mobile devices of those using Discord in any way.
+	<br>
+	No onion links.
+	<br>
+	No misinforming people into thinking that running a specified harmful command on Command Prompt, Powershell, Git Bash, etc. is safe.
+
+
+
+	<h2><strong>IV. PRIVACY</strong></h2>
+	No blackmailing or doxxing members, regardless of the intention or what the victim did.
+	<br>
+	Refrain from sharing private information in the server, whether it be yours or someone else's. Things such as addresses, credit card information, birth certificates, driver's licenses, plate numbers, account passwords, Social Security numbers and IDs are not allowed, regardless of how heavily censored or uncensored they may be.
+	<br>
+	No sharing links to websites that intentionally expose private information such as the aforementioned examples, especially those that contain the information of one or more server members.
 	
 	
 	
-	<h2><strong>III. CHANNELS</strong></h2>
+	<h2><strong>V. CHANNELS</strong></h2>
 	<a href="https://discord.com/channels/816604795406123008/816605776687661086">#nerd-spotted</a> is the welcome channel.
 	<br>
 	<a href="https://discord.com/channels/816604795406123008/816605861530959894">#simplified-rules</a> is the simplified rules channel. Note that because a more detailed version of the rules exist (which is this document), it does not mean that the only rules you are to follow are those that are stated in #simplified-rules, or vice versa.
@@ -92,13 +106,13 @@ h1, h2 {
 	<br>
 	<a href="https://discord.com/channels/816604795406123008/837529082425376808">#give-away-logs</a> is for proof that the prize is given after a giveaway has ended.
 	<br>
-	<a href="https://discord.com/channels/816604795406123008/816604795406123011">#main-chat</a> is the general communication channel. Conversations must strictly happen here. Conversations elsewhere that are more than 5 messages long are purgeable, excluding: those in the booster channel, those in the media channel that discuss certain media being sent, those in bot channels that discuss about the bots or their functionality, those in the feedback channel that discuss about feedback of something, those in the advertisement channel that discuss about the advertisements, those in the spam channel that are more of conversations than of actual spam, and those in the no-mic channel for conversations with those in vcs that have no microphone.
+	<a href="https://discord.com/channels/816604795406123008/816604795406123011">#main-chat</a> is the general communication channel. Conversations must strictly happen here. Conversations elsewhere that are more than 6 messages long are purgeable, excluding: those in the booster channel, those in the media channel that discuss certain media being sent, those in bot channels that discuss about the bots or their functionality, those in the feedback channel that discuss about feedback of something, those in the advertisement channel that discuss about the advertisements, those in the spam channel that are more of conversations than of actual spam, and those in the no-mic channel for conversations with those in vcs that have no microphone.
 	<br>
 	<a href="#">#boosters-only</a> is a Nitro-booster-only version of the general channel.
 	<br>
 	<a href="https://discord.com/channels/816604795406123008/816610198369075263">#media-and-memes</a> is the media channel.
 	<br>
-	<a href="https://discord.com/channels/816604795406123008/816610316179079191">#bots-are-for-nerds</a> and <a href"https://discord.com/channels/816604795406123008/822664911901032479">#bots-are-for-nerds-2</a> are the bot channels. Bot commands must only be executed here and only here, unless it is a moderation command executed by staff.
+	<a href="https://discord.com/channels/816604795406123008/816610316179079191">#bots-are-for-nerds</a> and <a href"https://discord.com/channels/816604795406123008/822664911901032479">#bots-are-for-nerds-2</a> are the bot channels. Bot commands must only be executed here and only here, unless it is a moderation command executed by staff. (It is suggested to execute moderation commands in moderation chat rather than in a publicly viewable channel.)
 	<br>
 	<a href="https://discord.com/channels/816604795406123008/816624744278786048">#feedback</a> is the feedback channel, usually for GD layouts or levels. YouTube links can be posted here as long as you are looking for feedback. However, this can also include non-GD stuff.
 	<br>
@@ -114,7 +128,7 @@ h1, h2 {
 	
 	
 	
-	<h2><strong>IV. SPAMMING</strong></h2>
+	<h2><strong>VI. SPAMMING</strong></h2>
 	Disallowed forms of spam include:
 	<br>
 	- General Spam: malvertisement, ad scams, etc.
@@ -151,7 +165,7 @@ h1, h2 {
 	
 	
 	
-	<h2><strong>V. MODERATION</strong></h2>
+	<h2><strong>VII. MODERATION</strong></h2>
 	Do not simply ask for staff. If you are to apply for staff you will strongly need acceptable experience as well as evidence, and you will have to wait until staff applications are open. Do not repeatedly superior staff for it.
 	<br>
 	If you want to be promoted, DM the owner about your request. Be serious about it. Do not repeatedly ask the owner about it.
@@ -159,6 +173,8 @@ h1, h2 {
 	If you want someone else to be promoted, DM the owner about your request. Do not repeatedly ask the owner about it.
 	<br>
 	There is no guarantee that you (or someone you want to be promoted) will be promoted after asking the owner about it.
+	<br>
+	You will not be given Staff Immunity upon promotion. This means that you can be demoted as soon as you are promoted, once you make a violation.
 	<br>
 	If you want to resign from staff or want to be demoted to a lower level of staff, DM the owner. However, you cannot simply ask to be demoted to trial staff, because that would cause a sort of promote-demote loop. The lowest form of staff you can ask for is normal staff. Do not repeatedly ask the owner about it.
 	<br>
@@ -168,11 +184,11 @@ h1, h2 {
 	<br>
 	Do not abuse your moderation abilities. Do not use them to blackmail or dox people, force people into doing something that violates the rules, ban or kick people for no good reason, assign or remove roles from people without a sufficient reason or permission, mass-ping people or roles without a sufficient reason or permission, or violate the rules yourself using your presence as a staff member as an excuse. No creating emojis that violate the rules or remove already-existing emojis that you did not create.
 	<br>
-	Do not mute, kick, ban, or perform any moderation commands on a person because of personal preference.
+	Do not timeout, mute, kick, ban, or perform any moderation commands on a person because of personal preference.
 	<br>
-	Do not make up your own rules for the server. If you wish for a rule to be added, DM the owner.
+	Do not make up your own rules for the server. If you wish for a rule to be added, edited or removed, DM the owner.
 	<br>
-	Be cautious for any accounts that are younger than 14 days old. If you detect any suspicious activity from the account, tempban or permaban the account immediately depending on the activities.
+	Be cautious for any accounts that are younger than 14 days old. If you detect any suspicious activity from the account, tempban or permaban the account immediately depending on the activities. Most of these accounts are usually alts, Dank Memer currency thieves, raid accounts, and the like. If someone joins, attempts to steal Dank Memer currency and then leaves, permaban them immediately without chance of appeal.
 	<br>
 	If you see someone Nitro scam raiding or racist-advertising, permaban the user without hesitation or remorse. Delete all the user has said in the server within 24 hours.
 	<br>
@@ -190,7 +206,7 @@ h1, h2 {
 	
 	
 	
-	<h2><strong>VI. GIVEAWAYS</strong></h2>
+	<h2><strong>VIII. GIVEAWAYS</strong></h2>
 	No begging. If you got re-rolled, that's probably because you didn't respond in time, and we don't need your verification on if we host legit or not. If a giveaway does not have any specified response time then you should claim it as soon as possible. If you do not claim it within 3 days or so, the giveaway will be re-rolled.
 	<br>
 	If you have won a giveaway but the giveaway host is offline, either wait for the host to become online and DM them there and then, or DM them while they're offline and they can give the prize once they are online.
@@ -201,7 +217,7 @@ h1, h2 {
 	
 	
 	
-	<h2><strong>VII. LOOPHOLES, BYPASSES, AND FALLACIES</strong></h2>
+	<h2><strong>IX. LOOPHOLES, BYPASSES, AND FALLACIES</strong></h2>
 	You are not allowed to use loopholes, false arguments and the like to escape a designated consequence for breaking a rule. These include:
 	<br>
 	- Ad Antiquitatem: "It's right because it's always been done that way."
