fixed some rules

--- a/discordrules.html
+++ b/discordrules.html
@@ -166,17 +166,17 @@ h1, h2 {
 	
 	
 	<h2><strong>VII. MODERATION</strong></h2>
-	Do not simply ask for staff. If you are to apply for staff you will strongly need acceptable experience as well as evidence, and you will have to wait until staff applications are open. Do not repeatedly superior staff for it.
+	Do not simply ask for staff. If you are to apply for staff you will strongly need acceptable experience as well as evidence, and you will have to wait until staff applications are open. Do not repeatedly beg superior staff for it.
 	<br>
-	If you want to be promoted, DM the owner about your request. Be serious about it. Do not repeatedly ask the owner about it.
+	If you want to be promoted and you are staff, DM the owner about your request. Be serious about it. Do not repeatedly ask the owner about it.
 	<br>
-	If you want someone else to be promoted, DM the owner about your request. Do not repeatedly ask the owner about it.
+	If you want someone else to be promoted or demoted, DM the owner about your request. Do not repeatedly ask the owner about it.
 	<br>
 	There is no guarantee that you (or someone you want to be promoted) will be promoted after asking the owner about it.
 	<br>
 	You will not be given Staff Immunity upon promotion. This means that you can be demoted as soon as you are promoted, once you make a violation.
 	<br>
-	If you want to resign from staff or want to be demoted to a lower level of staff, DM the owner. However, you cannot simply ask to be demoted to trial staff, because that would cause a sort of promote-demote loop. The lowest form of staff you can ask for is normal staff. Do not repeatedly ask the owner about it.
+	If you want to resign from staff or want to be demoted to a lower level of staff, DM the owner. However, you cannot simply ask to be demoted to trial staff, because that would cause a sort of promote-demote loop. The lowest form of staff you can ask for is normal staff. Do not repeatedly ask the owner about it. Once you make the request, you will not be promoted again unless you have been the highest voted for in a server election.
 	<br>
 	Anyone caught demoting or promoting staff without the owner's consent or knowledge will be demoted and tempbanned without appeal. Anyone caught performing false mutes, warns, kicks or bans will be demoted and/or tempbanned.
 	<br>
