--- a/discordrules.html
+++ b/discordrules.html
@@ -112,9 +112,9 @@ h1, h2 {
 	<br>
 	<a href="https://discord.com/channels/816604795406123008/816610198369075263">#media-and-memes</a> is the media channel.
 	<br>
-	<a href="https://discord.com/channels/816604795406123008/816610316179079191">#bots-are-for-nerds</a> and <a href"https://discord.com/channels/816604795406123008/822664911901032479">#bots-are-for-nerds-2</a> are the bot channels. Bot commands must only be executed here and only here, unless it is a moderation command executed by staff. (It is suggested to execute moderation commands in moderation chat rather than in a publicly viewable channel.)
+	<a href="https://discord.com/channels/816604795406123008/816610316179079191">#bots-are-for-nerds</a> and <a href="https://discord.com/channels/816604795406123008/822664911901032479">#bots-are-for-nerds-2</a> are the bot channels. Bot commands must only be executed here and only here, unless it is a moderation command executed by staff. (It is suggested to execute moderation commands in moderation chat rather than in a publicly viewable channel.)
 	<br>
-	<a href="https://discord.com/channels/816604795406123008/816624744278786048">#feedback</a> is the feedback channel, usually for GD layouts or levels. YouTube links can be posted here as long as you are looking for feedback. However, this can also include non-GD stuff.
+	<a href="https://discord.com/channels/816604795406123008/975906905140654140">#fanarts-or-stuff-like-that</a> is the fanart channel. Self-explanatory.
 	<br>
 	<a href="https://discord.com/channels/816604795406123008/816610427211350047">#anything-not-scipred</a> is the advertisement channel. Here you can post your YouTube channel links, Github commits or repositories, Twitter or Reddit posts, Twitch streams, Discord server invites, Quora questions or answers, and so on.
 	<br>
