--- a/discordrules.html
+++ b/discordrules.html
@@ -102,13 +102,15 @@ h1, h2 {
 	<br>
 	<a href="https://discord.com/channels/816604795406123008/836367900629532672">#notreallynouncements</a> is the channel where staff make unimportant announcements.
 	<br>
+	<a href="https://discord.com/channels/816604795406123008/978246600784756736">#random-facts</a> is the channel where superior staff post random facts.
+	<br>
 	<a href="https://discord.com/channels/816604795406123008/818164949310242847">#events-and-giveaways</a> is the channel where events or giveaways happen.
 	<br>
 	<a href="https://discord.com/channels/816604795406123008/837529082425376808">#give-away-logs</a> is for proof that the prize is given after a giveaway has ended.
 	<br>
 	<a href="https://discord.com/channels/816604795406123008/816604795406123011">#main-chat</a> is the general communication channel. Conversations must strictly happen here. Conversations elsewhere that are more than 6 messages long are purgeable, excluding: those in the booster channel, those in the media channel that discuss certain media being sent, those in bot channels that discuss about the bots or their functionality, those in the feedback channel that discuss about feedback of something, those in the advertisement channel that discuss about the advertisements, those in the spam channel that are more of conversations than of actual spam, and those in the no-mic channel for conversations with those in vcs that have no microphone.
 	<br>
-	<a href="#">#boosters-only</a> is a Nitro-booster-only version of the general channel.
+	<a href="https://discord.com/channels/816604795406123008/816889505407041588">#boosters-only</a> is a Nitro-booster-only version of the general channel.
 	<br>
 	<a href="https://discord.com/channels/816604795406123008/816610198369075263">#media-and-memes</a> is the media channel.
 	<br>
@@ -123,8 +125,6 @@ h1, h2 {
 	<a href="https://discord.com/channels/816604795406123008/834964607545638922">#questions</a> is for asking the owner questions. Personal/private questions are highly discouraged.
 	<br>
 	<a href="https://discord.com/channels/816604795406123008/834965042003836998">#answers</a> is for the owner's answers to your questions.
-	<br>
-	<a href="https://discord.com/channels/816604795406123008/816821876713717800">#chatpred</a> is the no-mic channel.
 	
 	
 	
