--- a/index.html
+++ b/index.html
@@ -8,44 +8,53 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="favicon.ico">
 <!--
-	Copyright SciPred 2020 onwards
+	By SciPred 2020 onwards
 	You can edit this to your extent, but do not re-host it nor present it as your own.
 	(Co-author claims may be an exception, but are you even one)
+
+	<li><a href="./numbermanipulator/" class="specs">Number Manipulator</a></li>
 -->
 <style>
-html, body {
+html, body, section {
 	width: 100%;
 	height: 100%;
 	margin: 0;
-	background: #ddd;
-	font-family: sans-serif;
+	font-family: 'Courier New', Courier, monospace;
 	overflow: auto;
 	transition: 0.5s;
-}
-h1, h2, h3, h4, h5, h6, p, i, b, q, strong, span {
 	cursor: default;
+	color: white;
 }
-h1, h2, h3 {
+body {
+	background: #ddd;
+}
+section {
 	text-align: center;
 	opacity: 0;
-	transition: 0.4s;
 }
-h1:hover {
-	color: green;
+h1 {
+	color: #00e600;
+	text-decoration: underline;
+	font-weight: bolder;
+	font-size: 35px;
 }
-p {
-	opacity: 0;
-	transition: 0.5s;
+h3 {
+	color: yellow;
 }
-::-webkit-scrollbar {width:10px;}
-::-webkit-scrollbar-track {background:black}
-::-webkit-scrollbar-thumb {background:#00E600;}
+h4 {
+	color: blue;
+	text-decoration: underline;
+}
+h4, ul {
+	text-align: left;
+	margin-left: 15px;
+}
 ul li a {
 	transition: all 0.3s;
 	cursor: pointer;
 	max-width: 500px;
 	text-decoration: underline;
-	color: #0000BB;
+	color: white;
 }
 ul li a:hover {
 	color: #00F600;
@@ -53,110 +62,59 @@ ul li a:hover {
 	padding: 2px;
 	border-radius: 4px;
 }
-ul li a:active {
-	color: white;
-}
-section {
-	width: 99.5%;
-	height: 0;
-	border: 1px dashed black;
-	margin: auto;
-	transition: 0.5s;
-}
-#lists {
-	opacity: 0;
-	transition: 0.5s;
-}
-#noos {
-	width: 10%;
-	background: white;
-	position: fixed;
-	height: 10%;
-	z-index: 1;
-	bottom: 0;
-	right: 0;
-	opacity: 0.2;
-	transition: 0.4s;
-	overflow: hidden;
-}
-#noos p {
-	opacity: 0;
-}
-#noos:hover {
-	opacity: 1;
-	width: 30%;
-	height: 20%;
-	overflow: auto;
-	padding: 7px;
-}
-#noos:hover p {
-	opacity: 1;
-}
-.specs {
-	color: #00C600;
-}
-.specs:hover {
-	color: orange;
-}
+::-webkit-scrollbar {width:10px;}
+::-webkit-scrollbar-track {background:black}
+::-webkit-scrollbar-thumb {background:#00E600;}
 </style>
 </head>
 <body>
 
 <section>
-<h1>Welcome To SciPred's Domain</h1>
-<h2>A Document for exploring a bunch of stuff he did during his free time.</h2>
-<h3 style="color:blue">Explore all you need to... if you have the time.</h3>
-<h3 style="color:green">Special projects are marked in green text.</h3>
+	<h1>Welcome to SciPred's Website</h1>
+	<h2>Here you can see a list of projects SciPred made during his spare time or from boredom.</h2>
+	<h3></h3>
+
+	<h4>Special Projects</h4>
+	<ul>
+	<li><a href="./discordrules.html" class="specs">Discord Server Rules</a></li>
+	</ul>
+	<h4>Normal Projects</h4>
+	<ul>
+	<li><a href="./numbermanipulator/" class="specs">Number Manipulator</a></li>
+	<li><a href="./SCPDCALC/" class="specs">SciPred's Calculator</a></li>
+	<li><a href="./ScrollDown/" class="specs">Scroll Down</a></li>
+	<li><a href="./stopwatch/" class="specs">Stopwatch</a></li>
+	<li><a href="./stringtool/" class="specs">Stringtool</a></li>
+	<li><a href="./textconverter/" class="specs">Text Converter</a></li>
+	<li><a href="./theProgressPage/" class="specs">The Progress Page</a></li>
+	</ul>
+	<h4>Experimental Projects</h4>
+	<ul>
+	<li><a href="./experimental/achv2/" class="specs">Achievofile</a></li>
+	<li><a href="./experimental/RandomBinGen/" class="specs">Random Binary Generator</a></li>
+	</ul>
+
 </section>
 
-<aside id="lists">
-<h4>PC PROJECTS</h4>
-<h5>Projects that cannot be directly accessible for mobile users.</h5>
-<ul id="pcpros">
-	<li><a href="./numbermanipulator/" class="specs">Number Manipulator</a></li>
-	<li><a href="./SCPDCALC/">SciPred's Calculator</a></li>
-	<li><a href="./stopwatch/" class="specs">Stopwatch</a></li>
-	<li><a href="./stringtool/">Stringtool</a></li>
-</ul>
-
-<h4>MINOR PROJECTS</h4>
-<h5>Projects that can be accessed by both desktop and mobile users.</h5>
-<ul>
-	<li><a href="./theProgressPage/">Progress Page</a></li>
-	<li><a href="./ScrollDown/">Scroll Down</a></li>
-	<li><a href="./textconverter/" class="specs">Text Converter</a></li>
-</ul>
-
-<h4>EXPERIMENTAL</h4>
-<h5>Experimental projects that were either unfinished, discarded, or postponed, but are still interesting enough to be included.</h5>
-<ul>
-	<li><a href="./experimental/achv2/">Achievofile</a></li>
-	<li><a href="./experimental/RandomBinGen/">Random Binary Generator</a></li>
-</ul>
-</aside>
-
 <script>
-function openNav() {
-	document.getElementsByTagName('section')[0].style.height = "35%";
-	document.getElementsByTagName('section')[0].style.overflowY = "auto";
-	document.body.style.background = "#eee";
-	setTimeout(function(){
-		document.getElementsByTagName('h1')[0].style.opacity = 1;
-		document.getElementsByTagName('h2')[0].style.opacity = 1;
-		document.getElementsByTagName('h3')[0].style.opacity = 1;
-		document.getElementsByTagName('h3')[1].style.opacity = 1;
-		document.getElementById('lists').style.opacity = 1;
-	}, 600);
-}
-setTimeout(openNav, 600);
-
+function gTag(tag) {return document.getElementsByTagName(tag);}
 function choose(arr) {return arr[Math.floor(Math.random()*arr.length)];}
 
-if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-	document.getElementById("pcpros").innerHTML = `
-		<li style="color:red">Sorry, you're on mobile. I'm doing my best to prevent errors happening on your device. (If you really want to see the documents that badly, then you could... if you were smart enough, and your settings compatible enough.)</li>
-	`;
+function openNav() {
+	document.body.style.background = "black";
+	gTag("h3")[0].innerHTML = choose([
+		"...say, haven't I seen you before?",
+		"I don't know what you'd be doing here though.",
+		"Not sure what you can do here though.",
+		"Though I doubt you'd find any of them interesting.",
+		"Well, that's it for now.",
+		"You can view them, or you can leave. It's up to you."
+	]);
+	setTimeout(function(){
+		gTag("section")[0].style.opacity = "1";
+	}, 500);
 }
+setTimeout(openNav, 250);
 </script>
 
 </body>
