--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ ul li a:hover {
 	<h2>Here you can see a list of projects SciPred made during his spare time or from boredom.</h2>
 	<h3></h3>
 
-	<h4>Special Projects</h4>
+	<h4>Special Pages</h4>
 	<ul>
 	<li><a href="./discordrules.html" class="specs">Discord Server Rules</a></li>
 	</ul>
@@ -94,6 +94,7 @@ ul li a:hover {
 	<li><a href="./experimental/RandomBinGen/" class="specs">Random Binary Generator</a></li>
 	</ul>
 
+	<h5>SciPred is not an expert. He is, however, prone to making things that other people have probably already made - except with a little less effort and even more pointlessness.</h5>
 </section>
 
 <script>
