--- a/SCPDCALC/index.html
+++ b/SCPDCALC/index.html
@@ -353,7 +353,7 @@ function animdispN(id) {
 </section>
 
 <strong onclick="showGuide()" unselectable="on">How To Use The Calculator</strong>
-<footer>This calculator is in development. For suggestions, reviews, and bug reports, you can contact me via <a href="https://discord.gg/2DDqrUbkYX" target="_blank">Discord</a>.</footer>
+<footer>This calculator is no longer in development. For suggestions, reviews, and bug reports, you can contact me via <a href="https://discord.gg/2DDqrUbkYX" target="_blank">Discord</a>.</footer>
 
 <script>
 function startProcess() {
